Add endpoint for creating logs
